# FastAPI

./: README.md
agentic_search_api/: app.py  main.py  pyproject.toml
authentication/: auth.py  database.py  main.py  models.py  products.py  pyproject.toml  schemas.py
dependency_injection/: data.py  main.py  models.py  pyproject.toml
fastapi_crud/: app.py  dishName.py  requirements.txt
llm-api/: .env  .gitignore  agent.py  main.py  pyproject.toml  railway.json  requirements.txt
mysql_connection/: database.py  main.py  models.py  pyproject.toml
practice/: data.py  main.py  models.py  pyproject.toml
security/: main.py  pyproject.toml
